--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,30 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.1'
+        kotlin_version = '1.5.31'
+        gradle_version = '7.0.4'
+
+        min_sdk_version = 21
+        target_sdk_version = 31
+        version_code = 1
+        version_code_name = '1.0'
+
+        androidx_core_ktx_version = '1.7.0'
+        androidx_common_ui_version = '1.4.0'
+        androidx_common_dependencies_version = '2.4.0'
+        compose_version = '1.0.5'
+
+        junit_version = '4.13.2'
+        test_junit_implementation_version = '1.1.3'
+        espresso_version = '3.4.0'
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.4"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
