--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "CustomIconHelperX"
 include ':app'
-include ':custom_icon'
+include ':custom_icon_helper_x'
