--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,10 +54,17 @@ dependencies {
     implementation "androidx.activity:activity-compose:$androidx_common_ui_version"
 
     implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.animation:animation:$compose_version"
+    implementation "androidx.compose.compiler:compiler:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material-icons-core:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.material:material-ripple:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02'
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_common_dependencies_version"
 
