--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "androidx.compose.material:material-icons-core:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.material:material-ripple:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
@@ -67,6 +68,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02'
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_common_dependencies_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$androidx_common_dependencies_version"
+
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$test_junit_implementation_version"
