--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ buildscript {
         junit_version = '4.13.2'
         test_junit_implementation_version = '1.1.3'
         espresso_version = '3.4.0'
+
+        glide_version = '4.12.0'
     }
     repositories {
         google()
