--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$androidx_common_dependencies_version"
 
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "io.coil-kt:coil:$coil_version"
+    implementation "io.coil-kt:coil-compose:$coil_version"
+    implementation "io.coil-kt:coil-gif:$coil_version"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$test_junit_implementation_version"
