--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
         espresso_version = '3.4.0'
 
         glide_version = '4.12.0'
+        coil_version = '1.4.0'
     }
     repositories {
         google()
