--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,6 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "CustomShortcutHelperX"
+rootProject.name = "Wukong"
 include ':app'
-include ':custom_shortcut_helper_x'
+include ':wukong'
