--- a/wukong/src/main/AndroidManifest.xml
+++ b/wukong/src/main/AndroidManifest.xml
@@ -238,6 +238,6 @@
     <uses-permission android:name="com.google.android.launcher.permission.WRITE_SETTINGS" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:supportsRtl="true" />
 </manifest>
